--- a/src/Day16_Distributions.ipynb/Task2_Z-Scores.ipynb
+++ b/src/Day16_Distributions.ipynb/Task2_Z-Scores.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "67ab785f-b8c3-4e6f-b394-f94d9613bdee",
    "metadata": {},
    "outputs": [
@@ -10,23 +10,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean: 47125.0\n",
-      "Standard Deviation: 30549.43300853319\n",
+      "Original Dataset:\n",
+      "  Student  Height_cm  SAT_Score\n",
+      "0    Amit        160        900\n",
+      "1   Rahul        170       1100\n",
+      "2   Sneha        165       1000\n",
+      "3   Karan        180       1400\n",
+      "4   Pooja        175       1200\n",
+      "5   Anita        172       1150\n",
+      "6    Ravi        168       1050\n",
+      "7    Neha        169       1080\n",
+      "8   Arjun        171       1120\n",
+      "9   Meera        210       1550\n",
+      "\n",
+      "Height Mean: 174.0\n",
+      "Height Std Dev: 13.743685418725535\n",
+      "\n",
+      "SAT Mean: 1155.0\n",
+      "SAT Std Dev: 190.91883092036784\n",
       "\n",
       "Dataset with Z-scores:\n",
-      "   Salary   z_score\n",
-      "0   25000 -0.724236\n",
-      "1   30000 -0.560567\n",
-      "2   32000 -0.495099\n",
-      "3   35000 -0.396898\n",
-      "4   40000 -0.233229\n",
-      "5   45000 -0.069559\n",
-      "6   50000  0.094110\n",
-      "7  120000  2.385478\n",
+      "  Student  Height_cm  SAT_Score  Height_Z     SAT_Z\n",
+      "0    Amit        160        900 -1.018650 -1.335646\n",
+      "1   Rahul        170       1100 -0.291043 -0.288081\n",
+      "2   Sneha        165       1000 -0.654846 -0.811863\n",
+      "3   Karan        180       1400  0.436564  1.283268\n",
+      "4   Pooja        175       1200  0.072761  0.235702\n",
+      "5   Anita        172       1150 -0.145521 -0.026189\n",
+      "6    Ravi        168       1050 -0.436564 -0.549972\n",
+      "7    Neha        169       1080 -0.363803 -0.392837\n",
+      "8   Arjun        171       1120 -0.218282 -0.183324\n",
+      "9   Meera        210       1550  2.619385  2.068942\n",
       "\n",
       "Outliers detected:\n",
       "Empty DataFrame\n",
-      "Columns: [Salary, z_score]\n",
+      "Columns: [Student, Height_cm, SAT_Score, Height_Z, SAT_Z]\n",
       "Index: []\n"
      ]
     }
@@ -35,34 +53,49 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# Example dataset (replace with your real data later)\n",
+    "# --------------------------------------------------\n",
+    "# 1️⃣ Create realistic dataset (Height + SAT Score)\n",
+    "# --------------------------------------------------\n",
     "data = {\n",
-    "    \"Salary\": [25000, 30000, 32000, 35000, 40000, 45000, 50000, 120000]  # last value is outlier\n",
+    "    \"Student\": [\"Amit\",\"Rahul\",\"Sneha\",\"Karan\",\"Pooja\",\"Anita\",\"Ravi\",\"Neha\",\"Arjun\",\"Meera\"],\n",
+    "    \"Height_cm\": [160, 170, 165, 180, 175, 172, 168, 169, 171, 210],   # 210 is extreme height\n",
+    "    \"SAT_Score\": [900, 1100, 1000, 1400, 1200, 1150, 1050, 1080, 1120, 1550]  # 1550 is extreme score\n",
     "}\n",
     "\n",
     "df = pd.DataFrame(data)\n",
     "\n",
-    "# -----------------------------\n",
-    "# 1️⃣ Mean and Standard Deviation\n",
-    "# -----------------------------\n",
-    "mean_val = df[\"Salary\"].mean()\n",
-    "std_val = df[\"Salary\"].std()\n",
+    "print(\"Original Dataset:\")\n",
+    "print(df)\n",
     "\n",
-    "print(\"Mean:\", mean_val)\n",
-    "print(\"Standard Deviation:\", std_val)\n",
+    "# --------------------------------------------------\n",
+    "# 2️⃣ Calculate Mean and Standard Deviation\n",
+    "# --------------------------------------------------\n",
+    "height_mean = df[\"Height_cm\"].mean()\n",
+    "height_std = df[\"Height_cm\"].std()\n",
     "\n",
-    "# -----------------------------\n",
-    "# 2️⃣ Calculate Z-score\n",
-    "# -----------------------------\n",
-    "df[\"z_score\"] = (df[\"Salary\"] - mean_val) / std_val\n",
+    "sat_mean = df[\"SAT_Score\"].mean()\n",
+    "sat_std = df[\"SAT_Score\"].std()\n",
+    "\n",
+    "print(\"\\nHeight Mean:\", height_mean)\n",
+    "print(\"Height Std Dev:\", height_std)\n",
+    "\n",
+    "print(\"\\nSAT Mean:\", sat_mean)\n",
+    "print(\"SAT Std Dev:\", sat_std)\n",
+    "\n",
+    "# --------------------------------------------------\n",
+    "# 3️⃣ Calculate Z-scores\n",
+    "# Z = (x - mean) / std\n",
+    "# --------------------------------------------------\n",
+    "df[\"Height_Z\"] = (df[\"Height_cm\"] - height_mean) / height_std\n",
+    "df[\"SAT_Z\"] = (df[\"SAT_Score\"] - sat_mean) / sat_std\n",
     "\n",
     "print(\"\\nDataset with Z-scores:\")\n",
     "print(df)\n",
     "\n",
-    "# -----------------------------\n",
-    "# 3️⃣ Identify Outliers |Z| > 3\n",
-    "# -----------------------------\n",
-    "outliers = df[np.abs(df[\"z_score\"]) > 3]\n",
+    "# --------------------------------------------------\n",
+    "# 4️⃣ Detect Outliers |Z| > 3\n",
+    "# --------------------------------------------------\n",
+    "outliers = df[(np.abs(df[\"Height_Z\"]) > 3) | (np.abs(df[\"SAT_Z\"]) > 3)]\n",
     "\n",
     "print(\"\\nOutliers detected:\")\n",
     "print(outliers)\n"
