--- a/src/Day18_home-tasks/Task2_JOINs_Python_Integration.ipynb
+++ b/src/Day18_home-tasks/Task2_JOINs_Python_Integration.ipynb
@@ -2,18 +2,37 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f631c92f-02b2-4b38-bdfc-04ff728859c9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Interns with their Mentors:\n",
+      "    name         track mentor_name\n",
+      "0  Pooja  Data Science  Dr. Sharma\n",
+      "1  Rahul       Web Dev    Mr. John\n",
+      "2   Amit  Data Science  Dr. Sharma\n",
+      "3  Sneha         UI/UX   Ms. Kavya\n",
+      "4  Karan       Web Dev    Mr. John\n"
+     ]
+    }
+   ],
    "source": [
     "import sqlite3\n",
+    "import pandas as pd\n",
     "\n",
-    "# Connect to existing database\n",
+    "# --------------------------------------------------\n",
+    "# 1️⃣ Connect to database\n",
+    "# --------------------------------------------------\n",
     "conn = sqlite3.connect(\"internship.db\")\n",
     "cursor = conn.cursor()\n",
     "\n",
-    "# Create mentors table\n",
+    "# --------------------------------------------------\n",
+    "# 2️⃣ Create mentors table\n",
+    "# --------------------------------------------------\n",
     "cursor.execute(\"\"\"\n",
     "CREATE TABLE IF NOT EXISTS mentors (\n",
     "    mentor_id INTEGER PRIMARY KEY,\n",
@@ -22,7 +41,6 @@
     ")\n",
     "\"\"\")\n",
     "\n",
-    "# Insert mentor data\n",
     "mentor_data = [\n",
     "    (1, \"Dr. Sharma\", \"Data Science\"),\n",
     "    (2, \"Mr. John\", \"Web Dev\"),\n",
@@ -31,93 +49,33 @@
     "\n",
     "cursor.executemany(\"INSERT OR IGNORE INTO mentors VALUES (?, ?, ?)\", mentor_data)\n",
     "\n",
-    "conn.commit()\n"
+    "conn.commit()\n",
+    "\n",
+    "# --------------------------------------------------\n",
+    "# 3️⃣ INNER JOIN Query\n",
+    "# --------------------------------------------------\n",
+    "query = \"\"\"\n",
+    "SELECT interns.name, interns.track, mentors.mentor_name\n",
+    "FROM interns\n",
+    "INNER JOIN mentors\n",
+    "ON interns.track = mentors.track\n",
+    "\"\"\"\n",
+    "\n",
+    "# --------------------------------------------------\n",
+    "# 4️⃣ Load result into Pandas\n",
+    "# --------------------------------------------------\n",
+    "df = pd.read_sql_query(query, conn)\n",
+    "\n",
+    "print(\"Interns with their Mentors:\")\n",
+    "print(df)\n",
+    "\n",
+    "conn.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07e06f39-1500-4555-8826-bed453e3e979",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7638c3e8-78c3-4c74-a737-65715a377ddb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f532b30-20d7-4fb9-a654-09b7cd8e91c8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d398f96-76de-4aae-a50a-01e1af376b4a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "55029ead-6213-4b82-a82c-111f2d3e99df",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83ca4780-6016-4951-bc32-1e9eeedaf10e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "20d57ba0-6d9c-4286-ba0d-5153eeab87cc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "179e2ffc-91e2-4e75-8538-ff555832c024",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e7d48cfa-1872-4dbb-9804-741d17d13753",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6f7f48bb-37bb-4a13-b1c7-9e743fcdfff8",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "098e4e41-ebe9-490b-905f-f9c6bce7ac40",
+   "id": "96fdc94d-8539-434b-858a-49d995fa0034",
    "metadata": {},
    "outputs": [],
    "source": []
